Fixed gaps toggle/search interaction bug

--- a/resources/css/kalendar.css
+++ b/resources/css/kalendar.css
@@ -267,7 +267,7 @@ gap {
   background: #feece9;
 }
 gap .hidden {
-  visibility: hidden;
+  display: none;
 }
 
 span[type=gap]::before, span[type=gap]::after, span[type=note]::before, span[type=note]::after {
