--- a/resources/css/sass/_kal.scss
+++ b/resources/css/sass/_kal.scss
@@ -70,7 +70,7 @@ gap {
     background: #feece9;
 
     .hidden {
-        visibility: hidden;
+        display: none;
     }
 }
 
